# weathercli

./: .gitignore  Cargo.toml  README.md
src/: convert.rs  help.rs  main.rs  weather.rs
